--- a/UtilTool/UtilTool.csproj
+++ b/UtilTool/UtilTool.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\MessageModel.cs" />
     <Compile Include="Common\RegConsts.cs" />
     <Compile Include="Common\DataTypeConvert.cs" />
     <Compile Include="Common\GZipHelper.cs" />
